feat: update container height and justify-content

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
@@ -14,13 +14,13 @@
   </head>
 
   <body>
+    <header class="hero">
+      <h1>Gerador de <span>senha</span></h1>
+      <p>
+        Utilize o nosso gerador online para criar uma senha forte e segura
+      </p>
+    </header>
     <main class="container">
-      <header class="hero">
-        <h1>Gerador de <span>senha</span></h1>
-        <p>
-          Utilize o nosso gerador online para criar uma senha forte e segura
-        </p>
-      </header>
       <section class="inputs">
         <div class="box">
           <input
@@ -83,4 +83,3 @@
     </main>
   </body>
 </html>
-
